about page text alignment fix

--- a/css/about-style.css
+++ b/css/about-style.css
@@ -34,6 +34,7 @@ body {
     width: 100vw;
     position: absolute;
     top: 75vh;
+    left: 0;
     background-color: #1e1e1e;
 }
 
@@ -42,8 +43,8 @@ body {
     font-family: "Roboto";
     font-weight: 400;
     font-size: 1.5rem;
-    max-width: 60ch;
-    margin-left: 5vw;
+    max-width: 40ch;
+    margin-left: calc(50vw - 40ch);
     text-align: left;
 }
 
@@ -60,9 +61,9 @@ body {
     font-family: "Roboto";
     font-weight: 400;
     font-size: 1.5rem;
-    max-width: 60ch;
+    max-width: 40ch;
     text-align: right;
-    margin-left: 10vw;
+    margin-right: calc(50vw - 40ch);
 }
 
 .about-title-text {
@@ -109,7 +110,7 @@ body {
     display: flex;
     justify-content: right;
     position: relative;
-    margin-left: 40%;
+    margin-left: 50%;
     width: 50%;
     background-color: #1e1e1e;
 
@@ -137,14 +138,14 @@ body {
 
 /* Media Queries */
 
-@media (max-width: 1000px){
+@media (max-width: 1200px){
     .textbox-left {
         color: white;
         font-family: "Roboto";
         font-weight: 400;
         font-size: 1rem;
         max-width: 40ch;
-        margin-left: 5vw;
+        margin-left: calc(50vw - 40ch);
         text-align: left;
     }
     
@@ -163,18 +164,20 @@ body {
         font-weight: 400;
         font-size: 1rem;
         max-width: 40ch;
-        margin-right: 50vw;
+        margin-right: calc(50vw - 40ch);
         text-align: right;
     }
 
     .text-container-right {
-        width: 100%;
+        width: 50%;
         padding: 1vw;
+        margin-left: 50%;
     }
 
     .text-container-left {
-        width: 100%;
+        width: 50%;
         padding: 1vw;
+        margin-left: 0;
     }
     
 }
